Give each session beathing space on the sessions page

--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -17,6 +17,7 @@
 @import "./pages/schedule";
 @import "./pages/organizers";
 @import "./pages/session";
+@import "./pages/sessions";
 @import "./pages/speaker";
 @import "./pages/speakers";
 @import "./pages/sponsors";
