--- a/src/scss/pages/_schedule.scss
+++ b/src/scss/pages/_schedule.scss
@@ -79,7 +79,10 @@ table.wcpt-schedule {
   tr.break,
   tr.short-break,
   tr.after-party,
-  tr.wcpt-time-110pm td {
+  tr.wcpt-time-110pm,
+  tr.wcpt-time-915am,
+  tr.wcpt-time-545pm,
+  tr.wcpt-time-445pm {
 		background-color: rgba(61,4,102,0.2) !important;
 
 		a.wcpt-session-title {
